force-app/main/default/objects/SF_Training_Topic__c/SF_Training_Topic__c.object-meta.xml
<CustomObject>
    <label>SF Training Topic</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>SF Training Topic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF Training Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>