force-app/main/default/objects/SF_Training_Topic__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>