force-app/main/default/objects/SF_Training_Topic__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <label>Instructor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>