force-app/main/default/objects/SF_Training_Topic__c/fields/Topic_Name__c.field-meta.xml
<CustomField>
    <fullName>Topic_Name__c</fullName>
    <label>Topic Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>