force-app/main/default/objects/SF_Training_Topic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Topic_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Instructor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>